--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "dist": "yarn run clean && yarn run build"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "prism-react-renderer": "^0.1.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-transition-group": "^4.1.1",
-    "styletron-engine-atomic": "^1.4.0",
-    "styletron-react": "^5.2.0",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "@babel/cli": "7.21.0",
+    "@babel/core": "7.21.3",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "babel-loader": "9.1.2",
+    "prism-react-renderer": "1.3.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-transition-group": "4.4.5",
+    "styletron-engine-atomic": "1.5.0",
+    "styletron-react": "6.1.0",
+    "webpack": "5.77.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.1"
   },
   "peerDependencies": {
-    "react": ">= 16",
-    "react-dom": ">= 16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-transition-group": ">= 4",
-    "styletron-engine-atomic": "^1.4.0",
-    "styletron-react": "^5.2.0"
+    "styletron-engine-atomic": "1.4.0",
+    "styletron-react": "5.2.0"
   }
 }
